<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/main_title">

        <EditTextPreference
            app:defaultValue="com.qidian.QDReader"
            app:key="packageName"
            app:title="@string/packageName"
            android:defaultValue="com.qidian.QDReader"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/header">

        <SwitchPreferenceCompat
            app:key="isEnableAutoSign"
            app:title="@string/sw_autosignin" />

        <SwitchPreferenceCompat
            app:key="isEnableOldLayout"
            app:title="@string/sw_old_layout" />

        <SwitchPreferenceCompat
            app:key="isEnableLocalCard"
            app:title="@string/sw_local_card" />

        <SwitchPreferenceCompat
            app:key="isEnableRemoveBookshelfFloat"
            app:title="@string/sw_bookshelf_float" />

        <SwitchPreferenceCompat
            app:key="isEnableRemoveBookshelfBottomAd"
            app:title="@string/sw_bottom_ad" />

    </PreferenceCategory>

</PreferenceScreen>